# digital-logic-design-primitives

./: CMakeLists.txt  README.md
src/: combinational.hpp  logic.hpp  main.cpp  sequential.hpp
tests/: test_all.cpp
verilog/: README.md
